--- a/CIS-alarms-cfn.yml
+++ b/CIS-alarms-cfn.yml
@@ -55,7 +55,7 @@ Resources:
       QueryString: |-
         fields @timestamp, @message | 
           sort @timestamp desc | 
-          filter errorCode == '*UnauthorizedOperation' or errorCode == 'AccessDenied*'
+          filter errorCode LIKE 'UnauthorizedOperation' or errorCode LIKE 'AccessDenied'
 
 # ------------------------------------------------------------------------------------------------------------------------------------
 # CIS AWS Foundations Benchmark - 3.2   Ensure a log metric filter and alarm exist for Management Console sign-in without MFA (Scored)
