--- a/CIS-alarms-cfn.yml
+++ b/CIS-alarms-cfn.yml
@@ -82,7 +82,7 @@ Resources:
       FilterPattern: |-
         {
           ($.eventName = "ConsoleLogin") &&
-          ($.responseElements.ConsoleLogin !== "Success") &&
+          ($.responseElements.ConsoleLogin != "Success") &&
           ($.additionalEventData.MFAUsed != "Yes")
         }
       MetricTransformations:
@@ -98,7 +98,7 @@ Resources:
       QueryString: |-
         fields @timestamp, @message | 
           sort @timestamp desc | 
-          filter eventName == 'ConsoleLogin' and responseElements.ConsoleLogin == 'Success' and additionalEventData.MFAUsed != 'Yes'
+          filter eventName == 'ConsoleLogin' and responseElements.ConsoleLogin != 'Success' and additionalEventData.MFAUsed != 'Yes'
 
 # ------------------------------------------------------------------------------------------------------------------------------------
 # CIS AWS Foundations Benchmark - 1.1   Avoid the use of the "root" account (Scored)
